--- a/algorithms.ipynb
+++ b/algorithms.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "#Load statistical analysis\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols\n",
     "from statsmodels.stats.multicomp import MultiComparison, pairwise_tukeyhsd"
@@ -159,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -177,6 +176,16 @@
     "model = ols(\"Cu ~ C(Samples)\", data=anova_data).fit()\n",
     "aov_table = sm.stats.anova_lm(model, typ=1)\n",
     "print(aov_table)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "According to the result, the ANOVA has found a significant effect of \"Copper\" on the \"Samples\", as indicated by the very small p-value (0.000007). This suggests that there is a significant difference in the dependent variable among the different types of the \"Samples\" variable.\n",
+    "\n",
+    "The F-statistic (240.81) also indicates a large effect size, suggesting that the variability in the dependent variable among the different types of the \"Samples\" variable is much greater than the variability within each type of the \"Samples\" variable."
    ]
   },
   {
@@ -214,6 +223,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Tukey HSD test is used to compare the means of all possible pairs of groups. In this case, the groups being compared are Flesh, Gills, Intestine, Liver, and Water.\n",
+    "\n",
+    "According to the analysis, the means of Flesh and Water, Flesh and Gills, and Gills and Water do not differ significantly from each other, as indicated by the high p-values (greater than 0.05) and the \"False\" values in the \"reject\" column.\n",
+    "\n",
+    "However, the means of Flesh and Liver, Gills and Liver, Intestine and Liver, and Liver and Water do differ significantly from each other, as indicated by the low p-values (less than 0.05) and the \"True\" values in the \"reject\" column. Meaning the null hypothesis in each of the pair is rejected."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -233,6 +254,16 @@
     "model = ols(\"Cd ~ C(Samples)\", data=anova_data).fit()\n",
     "aov_table = sm.stats.anova_lm(model, typ=1)\n",
     "print(aov_table)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the output, the p-value is 0.003297, which is less than the typical significance level of 0.05. This suggests that there is a significant difference in the effect of Cadmium between at least two of the samples.\n",
+    "\n",
+    "Therefore, we can reject the null hypothesis, and conclude that there is a significant difference in the effect of Cadmium among at least some of the samples. "
    ]
   },
   {
@@ -270,6 +301,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the comparison of Cadmium and the samples, the ANOVA results show that there is a significant difference among the groups (p=0.0033). However, the Tukey HSD post-hoc test did not reveal any significant differences between the groups after correction for multiple comparisons, except for the comparison between Flesh and Water, where the mean difference was 0.008 and the p-value was 0.0392. This indicates that the concentration of Cadmium in the flesh and water samples may be significantly different."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -292,6 +331,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For Zinc and samples, the p-value for the ANOVA test is 0.0715 which is greater than 0.05. Therefore, there is sufficient evidence to reject the null hypothesis that there is no significant difference in mean Zinc levels among the different samples."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -307,10 +354,18 @@
     }
    ],
    "source": [
-    "# Fit the one-way ANOVA model using the ols method for Cu\n",
+    "# Fit the one-way ANOVA model using the ols method for Pb\n",
     "model = ols(\"Pb ~ C(Samples)\", data=anova_data).fit()\n",
     "aov_table = sm.stats.anova_lm(model, typ=1)\n",
     "print(aov_table)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the ANOVA results, it can be concluded that there is a significant difference between the lead in the different samples (F = 363.203, p < 0.0001). To determine which groups are significantly different from each other, a post-hoc Tukey HSD test can be perform."
    ]
   },
   {
@@ -345,6 +400,14 @@
     "mc = MultiComparison(anova_data['Pb'], anova_data['Samples'])\n",
     "mc_results = mc.tukeyhsd()\n",
     "print(mc_results)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For Lead, the ANOVA results show a p-value of less than 0.05, indicating we have evidence to reject the null hypothesis that the means of the groups are equal. The Tukey HSD test shows that all pairwise comparisons between the groups are statistically significant, except for Flesh vs. Gills, which is not statistically significant."
    ]
   }
  ],
